--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,11 @@
   "license": "MIT",
   "dependencies": {
     "angular": "~1.2.20",
-    "angular-resource": "~1.2.20"
+    "angular-resource": "~1.2.20",
+    "font-awesome": "~4.1.0",
+    "font-awesome-animation": "~0.0.5",
+    "angular-notifyjs": "~0.1.0",
+    "bootstrap": "~3.2.0",
+    "angular-bootstrap": "~0.11.0"
   }
 }
