Added Google Login to controller Added sample google login

--- a/.env.local.php.sample
+++ b/.env.local.php.sample
@@ -6,5 +6,7 @@ return array(
     'DB_USERNAME' => 'sample_name',
     'DB_PASSWORD' => 'sample_pass',
     'DB_HOST' => 'sample_host'
+    'GOOGLE_ID' => '',
+    'GOOGLE_SECRET' => ''
 
 );
