--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-notifyjs": "~0.1.0",
     "bootstrap": "~3.2.0",
     "angular-bootstrap": "~0.11.0",
-    "ng-parallax": "~0.1.8"
+    "ng-parallax": "~0.1.8",
+    "angular-animate": "~1.2.23"
   }
 }
