--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "bootstrap": "~3.2.0",
     "angular-bootstrap": "~0.11.0",
     "ng-parallax": "~0.1.8",
-    "angular-animate": "~1.2.23"
+    "angular-animate": "~1.2.23",
+    "angular-marked": "~0.0.12",
+    "angular-route": "~1.2.23"
   }
 }
